--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "superagent": "^3.8.2",
     "vue": "^2.5.2",
     "vue-echarts": "^3.0.7",
+    "vue-i18n": "^7.6.0",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
